# logos-blog

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  metadata.json  module.yaml  ui_metadata.json
lez-registry/: Cargo.toml  Makefile  README.md
lez-registry/blog_registry_core/: Cargo.toml
lez-registry/blog_registry_core/src/: lib.rs
lez-registry/methods/guest/: Cargo.toml
lez-registry/src/: lib.rs
modules/blog/: manifest.json
qml/: BlogView.qml  DraftsView.qml  EditorView.qml  FeedView.qml  Main.qml  MyPostsView.qml  PostView.qml  ProfileView.qml  SettingsView.qml  SubscribeDialog.qml  blog_ui.qrc
qml/components/: AuthorChip.qml  ErrorBanner.qml  MarkdownText.qml  PostCard.qml  SidebarButton.qml  TagChip.qml
specs/: 01-overview.md  02-data-model.md  03-components.md  04-waku-protocol.md  05-rss-bridge.md  06-ui-design.md  07-build-system.md  08-implementation-plan.md
src/: blog_backend.cpp  blog_backend.h  blog_plugin.cpp  blog_plugin.h  blog_ui_component.cpp  blog_ui_component.h  chat_sync.cpp  chat_sync.h  crypto.cpp  crypto.h  feed_store.cpp  feed_store.h  i_component.h  module_proxy.h  plugin_metadata.json  post_store.cpp  post_store.h  rss_server.cpp  rss_server.h  storage_sync.cpp  storage_sync.h  waku_sync.cpp  waku_sync.h
tests/: mock_kv_client.h  module_proxy.h  test_blog_plugin.cpp  test_crypto.cpp  test_feed_store.cpp  test_post_store.cpp  test_rss_server.cpp
