[package]
name = "blog-registry"
version = "0.1.0"
edition = "2021"
description = "On-chain Logos blog post registry — stores author_pubkey → Vec<CID> mappings"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
lez-framework = { git = "https://github.com/logos-co/spel", package = "lez-framework" }
