[package]
name = "blog_registry_core"
version = "0.1.0"
edition = "2021"
description = "Shared types and mock implementation for the Logos Blog LEZ registry"
license = "MIT"

[dependencies]
borsh = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

[lib]
crate-type = ["rlib"]
