[package]
name = "blog_registry"
version = "0.1.0"
edition = "2021"
description = "On-chain SPEL entry point for the Logos Blog author→CID registry"
license = "MIT"

[dependencies]
blog_registry_core = { path = "../../blog_registry_core" }
lez-framework = { git = "https://github.com/logos-co/spel" }
nssa-core = { git = "https://github.com/logos-co/spel" }
risc0-zkvm = { version = "1.0", default-features = false, features = ["guest"] }
borsh = "1"
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "blog_registry"
path = "src/bin/blog_registry.rs"
